[FIX] Makes tabbed menu items stretch vertically so they can be clicked on properly.

--- a/6-components/_components.navigation.scss
+++ b/6-components/_components.navigation.scss
@@ -22,6 +22,7 @@ $menu-tabbed-item-active-bg-colour:    $green-victoria !default;
     display: table;
     table-layout: fixed;
     width: 100%;
+    height: 1px;
     text-align: center;
 
     // 1st level menu items
@@ -64,16 +65,23 @@ $menu-tabbed-item-active-bg-colour:    $green-victoria !default;
                 @include triangle( $menu-tabbed-item-triangle-width $menu-tabbed-item-triangle-height, $menu-tabbed-item-active-bg-colour, down);
             }
         }
+
         > a {
-            display: inline-block;
+            display: table;
             width: 100%;
-            font-size: 1.1em;
+            height: 100%;
             padding: $menu-tabbed-padding-vertic $menu-tabbed-padding-horiz;
+            font-size: 1.1em;
             font-family: $caption-font-family;
             font-weight: $weight-light;
             line-height: 1;
             color: $grey-stack;
             text-decoration: none;
+
+            > div {
+                display: table-cell;
+                vertical-align: middle;
+            }
 
             @include hoverify {
                 background-color: $menu-tabbed-item-hover-bg-colour;
@@ -85,18 +93,18 @@ $menu-tabbed-item-active-bg-colour:    $green-victoria !default;
 
 // Makes two col button container with one button left & one right
 .two-btn-nav {
+    font-size: 115%; // Large buttons sizing - propagete into its own class
     @include make-table-column( $two-btn-layout );
 
     p {
+        margin-bottom: .35em;
         font-size: 80%;
         color: $grey-stack;
     }
 
     .btn { margin: 0; }
 
-    &:first-child {
-        padding-right: .5em;
-    }
+    &:first-child { padding-right: .5em; }
 
     &:last-child {
         padding-left: .5em;
@@ -137,7 +145,10 @@ $menu-tabbed-item-active-bg-colour:    $green-victoria !default;
             }
 
             > li > a {
+                display: block; // Override to enable label's ellipsis
                 padding: .6em .4em .4em .4em;
+
+                > div { display: inline; } // Override to enable label's ellipsis
             }
 
             .label {
